# DRF

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.sh
DRF/: __init__.py  celery.py  settings.py  urls.py
Event/: apps.py  cache.py  models.py  signals.py  tasks.py
Event/api/: __init__.py  serializers.py  urls.py  views.py
Event/migrations/: 0001_initial.py  0002_user_notify.py
compose/nginx/: default.conf
test/: tests.py
